# NDI-to-Spout-Bridge

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  SpoutToNDIBridge.sln  SpoutToNDIBridge.vcxproj  SpoutToNDIBridge.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
ARM64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
ARM64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
SpoutToNDIBridge.dir/Debug/SpoutToNDIBridge.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
lib/Spout-SDK-binaries/2-007-015/Examples/SpoutGL/Openframeworks/: readme.txt
lib/Spout-SDK-binaries/2-007-015/Libs/MD/lib/: SpoutDX12.lib  SpoutDX12_static.lib  SpoutDX9_static.lib  SpoutDX_static.lib
lib/Spout-SDK-binaries/2-007-015/Libs/MT/lib/: SpoutDX12_static.lib  SpoutDX9.lib  SpoutDX9_static.lib  SpoutDX_static.lib  Spout_static.lib
src/: BridgeInstance.cpp  BridgeInstance.h  DialogHandlers.cpp  DialogHandlers.h  ListView.cpp  ListView.h  SDKIncludes.h  Utils.h  main.cpp  resource.h  resource.rc
